@@ -1,3 +1,8 @@
+2010-11-15 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/z80/peep.c (z80instructionSize): fixed warning
+	* support/regression/tests/bug-3117729.c: fixed and enabled for mcs51
+
 2010-12-05 Borut Razem <borut.razem AT siol.net>
 
 	* Makefile.in:
